# tropes_1500

./: .gitignore  .pre-commit-config.yaml  20_images.txt  CITATION.cff  DEVELOPMENT.md  Gemma3_report.md  README.md  data.csv  moondream_qa_report.md  moondream_report.md  ollama_report.md  pyproject.toml  references.bib  scatter_data.csv
999_detect_data/: DinoManWoman2_012s8YsrzEki.tsv  DinoManWoman2_012s8YsrzuQs.tsv  DinoManWoman2_012s8YsxtAmG.tsv  DinoManWoman2_012s93JushG3.tsv  DinoManWoman2_012s93RMWbYX.tsv  DinoManWoman2_012s93RNwtpd.tsv  DinoManWoman2_012s93RNwttx.tsv  DinoManWoman2_012s93RNxEJa.tsv  DinoManWoman2_012s93RNzFVj.tsv  DinoManWoman2_012s93RNzafy.tsv  DinoManWoman2_012s93RQRt2X.tsv  DinoManWoman2_012s93RRusY9.tsv  DinoManWoman2_012s93RRvDFJ.tsv  DinoManWoman2_012s93RRxZ1R.tsv  DinoManWoman2_012s93RRxZK5.tsv  DinoManWoman2_012s93RRxZcq.tsv  DinoManWoman2_012s93RTPrk1.tsv  DinoManWoman2_012s93m1b5ZJ.tsv  DinoManWoman2_012s93m1bQaj.tsv  DinoManWoman2_012s93m61gsL.tsv  DinoManWoman2_012s93m61h28.tsv  DinoManWoman2_012s93m62hr5.tsv  DinoManWoman2_012s93m7Ufrp.tsv  DinoManWoman2_012s93m7X2TW.tsv  DinoManWoman2_012s93m7X2TY.tsv  DinoManWoman2_012s93m91LmG.tsv  DinoManWoman2_012s93mATfAr.tsv  DinoManWoman2_012s93mATzVv.tsv  DinoManWoman2_012s93mAUfEe.tsv  DinoManWoman2_012s93mBxzE3.tsv  DinoManWoman2_012s93sf3BQc.tsv  DinoManWoman2_012s93sf3X7r.tsv  DinoManWoman2_012s93sf3rJA.tsv  DinoManWoman2_012s93sgV9j5.tsv  DinoManWoman2_012s93sgVVMj.tsv  DinoManWoman2_012s93sgWpyq.tsv  DinoManWoman2_012s9YC1WZsy.tsv  DinoManWoman2_012sAXxQfY5s.tsv  (+8481 more)
browser/: scatter.md
(+7900 files in other folders)
